change several r file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,30 @@
 
 export(gen_data)
 export(hello)
+export(num_plot)
 export(plot_accel)
 export(spec_sig)
 export(spectral_signature)
+export(type_plot)
+importFrom(dplyr,.data)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate_at)
+importFrom(dplyr,n)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,theme_minimal)
 importFrom(purrr,map_dfc)
 importFrom(tidyr,pivot_longer)
