--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,12 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
+importFrom(generics,tidy)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
+importFrom(gtsummary,tbl_regression)
+importFrom(nnet,multinom)
 importFrom(purrr,map_dfc)
 importFrom(tidyr,pivot_longer)
