add test function for multi_logit, change package ok for check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(plot_accel)
 export(spec_sig)
 export(spectral_signature)
 export(type_plot)
+importFrom(broom,tidy)
 importFrom(dplyr,.data)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
@@ -18,7 +19,6 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarize)
 importFrom(dplyr,vars)
-importFrom(generics,tidy)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,geom_col)
